--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,8 @@ ul {
 }
 
 .nav-link {
-  display: block; /* Чтобы ссылка заняла всю ширину и не было справа зазора 4рх */
+  display: block;
+  position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
@@ -114,6 +115,18 @@ ul {
 .current {
   color: var(--accent-color);
 }
+
+.nav-link.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+}
+
 /* Стилизация Site-contacts */
 .contacts-list {
   display: flex;
