--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,8 @@ ul {
   background-color: var(--accent-color);
   color: var(--hero-text-color);
   cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-primary:hover,
