--- a/css/styles.css
+++ b/css/styles.css
@@ -264,9 +264,34 @@ ul {
 .services-list {
   display: flex;
 }
+
 .services-list-item:not(:last-child) {
   margin-right: 30px;
 }
+
+.services-list-item {
+  position: relative;
+}
+
+.services-list-item::before {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.services-description {
+  position: absolute;
+  bottom: 27px;
+  left: 83px;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--hero-text-color);
+}
+
 /* Стилизация секции "Наша команда" */
 .team {
   background-color: #f5f4fa;
