--- a/css/styles.css
+++ b/css/styles.css
@@ -346,6 +346,8 @@ ul {
   border-radius: 50%;
   padding: 12px;
   fill: #afb1b8;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover {
