--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,7 @@ ul {
   margin-left: auto;
   margin-bottom: 50px;
 }
+
 .button-list {
   display: flex;
   justify-content: center;
@@ -500,24 +501,6 @@ ul {
 
 .button-list-item:not(:last-child) {
   margin-right: 8px;
-}
-
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: calc(-1 * var(--portfolio-card-gap));
-  margin-top: calc(-1 * var(--portfolio-card-gap)); /* Так запишется -30рх */
-}
-
-.portfolio-list-item {
-  flex-basis: calc(100% / 3 - var(--portfolio-card-gap));
-  margin-left: var(--portfolio-card-gap);
-  margin-top: var(--portfolio-card-gap);
-}
-
-.cards-container {
-  padding: 20px 24px;
-  border: 1px solid #eeeeee;
 }
 
 .button {
@@ -545,15 +528,57 @@ ul {
   border-radius: 4px;
 }
 
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * var(--portfolio-card-gap));
+  margin-top: calc(-1 * var(--portfolio-card-gap)); /* Так запишется -30рх */
+}
+
+.portfolio-list-item {
+  flex-basis: calc(100% / 3 - var(--portfolio-card-gap));
+  margin-left: var(--portfolio-card-gap);
+  margin-top: var(--portfolio-card-gap);
+}
+
 .project-link {
   display: block;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-link:hover,
 .project-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-overlay-description {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.6;
+  color: var(--hero-text-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-link:hover .project-overlay-description {
+  transform: translateY(0%);
+}
+
+.cards-container {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
 }
 
 .project-title {
