--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,7 @@ ul {
 
 .services-list-item {
   position: relative;
+  z-index: -1; /* Добавил, чтобы скрыть из за бекдропом */
 }
 
 .services-list-item::before {
@@ -594,4 +595,54 @@ ul {
   font-size: 16px;
   line-height: 1.9;
   color: var(--secondary-text-color);
+}
+/* Стилизация модального окна */
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.8);
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 528px;
+  height: 581px;
+  padding: 8px;
+  border-radius: 4px;
+  background-color: var(--primary-background-color);
+  opacity: 1;
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-modal-close {
+  display: flex;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
