--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,6 @@ ul {
 
 .services-list-item {
   position: relative;
-  z-index: -1; /* Добавил, чтобы скрыть из за бекдропом */
 }
 
 .services-list-item::before {
@@ -609,6 +608,7 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
